--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@types/node": "^22.10.2",
     "autoprefixer": "^10.4.20",
     "lucide-react": "^0.469.0",
@@ -18,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "tw-neumorphism": "^0.2.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
