--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.54.2",
     "tw-neumorphism": "^0.2.0",
     "use-debounce": "^10.0.4",
+    "uuid": "^11.0.3",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
